# mastauri

./: Cargo.toml  README.md  style.css
crates/mastodon/: Cargo.toml
crates/mastodon-model/: Cargo.toml
crates/mastodon-model/src/: model.rs
crates/mastodon/src/: api.rs  lib.rs
src/: app.rs  main.rs  toot.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
