[package]
name = "mastauri-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-utils = "0.1"
js-sys = "0.3.59"
mastodon-model = { path = "crates/mastodon-model" }
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19"

[workspace]
members = ["src-tauri", "crates/mastodon-model", "crates/mastodon"]
