[package]
name = "mastodon-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
url = { version = "2.3", features = ["serde"] }
