[package]
name = "mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mastodon-model = { path = "../mastodon-model" }
reqwest = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["full"]}
url = "2.3"
